--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3827,20 +3827,24 @@ input, select, textarea {
 				margin: 0 0 2em 3em;
 			}
 
+:root{
+	--whiteish: #979cbf;
+}
+
 			.wrapper.spotlight.style2 {
-				background-color: #45558d;
+				background-color: var(--whiteish);
 			}
 
 				.wrapper.spotlight.style2:before, .wrapper.spotlight.style2:after {
-					background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cpolygon points='0,100 100,0 100,100' style='fill:%2345558d%3B' /%3E%3C/svg%3E");
+					background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cpolygon points='0,100 100,0 100,100' style='fill:%23979cbf%3B' /%3E%3C/svg%3E");
 				}
 
 				.wrapper.spotlight.style2:before {
-					box-shadow: inset 0 -1px 0 0 #45558d, 0 1px 0 0 #45558d;
+					box-shadow: inset 0 -1px 0 0 var(--whiteish), 0 1px 0 0 var(--whiteish);
 				}
 
 				.wrapper.spotlight.style2:after {
-					box-shadow: inset 0 -1px 0 0 #45558d, 0 1px 0 0 #45558d;
+					box-shadow: inset 0 -1px 0 0 var(--whiteish), 0 1px 0 0 var(--whiteish);
 				}
 
 			.wrapper.spotlight.style3 {
@@ -4153,4 +4157,30 @@ input, select, textarea {
 			padding: 2em 1.5em 0.1em 1.5em ;
 		}
 
+	}
+
+
+
+
+
+
+
+
+	/* My custom stuff */
+	.my-image-left img{
+		width: 32vw;
+		height: 18vw;
+		max-width: 640px;
+		max-height: 360px;
+		border-radius: 10px;
+		margin-right: 3vw;
+	}
+
+	.my-image-right img{
+		width: 32vw;
+		height: 18vw;
+		max-width: 640px;
+		max-height: 360px;
+		border-radius: 10px;
+		margin-left: 3vw;
 	}
