--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3828,11 +3828,11 @@ input, select, textarea {
 			}
 
 :root{
-	--whiteish: #979cbf;
+	--whiteish1: #979cbf;
 }
 
 			.wrapper.spotlight.style2 {
-				background-color: var(--whiteish);
+				background-color: var(--whiteish1);
 			}
 
 				.wrapper.spotlight.style2:before, .wrapper.spotlight.style2:after {
@@ -3840,43 +3840,43 @@ input, select, textarea {
 				}
 
 				.wrapper.spotlight.style2:before {
-					box-shadow: inset 0 -1px 0 0 var(--whiteish), 0 1px 0 0 var(--whiteish);
+					box-shadow: inset 0 -1px 0 0 var(--whiteish1), 0 1px 0 0 var(--whiteish1);
 				}
 
 				.wrapper.spotlight.style2:after {
-					box-shadow: inset 0 -1px 0 0 var(--whiteish), 0 1px 0 0 var(--whiteish);
+					box-shadow: inset 0 -1px 0 0 var(--whiteish1), 0 1px 0 0 var(--whiteish1);
 				}
 
 			.wrapper.spotlight.style3 {
-				background-color: #3f4e85;
+				background-color: var(--whiteish1);
 			}
 
 				.wrapper.spotlight.style3:before, .wrapper.spotlight.style3:after {
-					background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cpolygon points='0,100 100,0 100,100' style='fill:%233f4e85%3B' /%3E%3C/svg%3E");
+					background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cpolygon points='0,100 100,0 100,100' style='fill:%23979cbf%3B' /%3E%3C/svg%3E");
 				}
 
 				.wrapper.spotlight.style3:before {
-					box-shadow: inset 0 -1px 0 0 #3f4e85, 0 1px 0 0 #3f4e85;
+					box-shadow: inset 0 -1px 0 0 var(--whiteish1), 0 1px 0 0 var(--whiteish1);
 				}
 
 				.wrapper.spotlight.style3:after {
-					box-shadow: inset 0 -1px 0 0 #3f4e85, 0 1px 0 0 #3f4e85;
+					box-shadow: inset 0 -1px 0 0 var(--whiteish1), 0 1px 0 0 var(--whiteish1);
 				}
 
 			.wrapper.spotlight.style4 {
-				background-color: #39477c;
+				background-color: var(--whiteish1);
 			}
 
 				.wrapper.spotlight.style4:before, .wrapper.spotlight.style4:after {
-					background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cpolygon points='0,100 100,0 100,100' style='fill:%2339477c%3B' /%3E%3C/svg%3E");
+					background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cpolygon points='0,100 100,0 100,100' style='fill:%23979cbf%3B' /%3E%3C/svg%3E");
 				}
 
 				.wrapper.spotlight.style4:before {
-					box-shadow: inset 0 -1px 0 0 #39477c, 0 1px 0 0 #39477c;
+					box-shadow: inset 0 -1px 0 0 var(--whiteish1), 0 1px 0 0 var(--whiteish1);
 				}
 
 				.wrapper.spotlight.style4:after {
-					box-shadow: inset 0 -1px 0 0 #39477c, 0 1px 0 0 #39477c;
+					box-shadow: inset 0 -1px 0 0 var(--whiteish1), 0 1px 0 0 var(--whiteish1)c;
 				}
 
 			.wrapper.spotlight.style5 {
@@ -4167,6 +4167,11 @@ input, select, textarea {
 
 
 	/* My custom stuff */
+	p{
+		transition: all 0.5s ease-in-out;
+	}
+
+
 	.my-image-left img{
 		width: 32vw;
 		height: 18vw;
@@ -4174,6 +4179,7 @@ input, select, textarea {
 		max-height: 360px;
 		border-radius: 10px;
 		margin-right: 3vw;
+		transition: all 0.5s ease-in-out;
 	}
 
 	.my-image-right img{
@@ -4183,4 +4189,65 @@ input, select, textarea {
 		max-height: 360px;
 		border-radius: 10px;
 		margin-left: 3vw;
+		transition: all 0.5s ease-in-out;
+	}
+
+	a.clickable-img{
+		border-bottom: none;
+		transition: 0.2s;
+	}
+
+	@media (hover: hover){
+		.clickable-img:hover{
+			transform: scale(1.06);
+			filter: brightness(120%);
+		}
+
+		.clickable-img > img:hover{
+			box-shadow: 10px 10px 50px 15px;
+		}
+	}
+	
+
+	.logo-link{
+		border-bottom: none;
+		margin-right: 15px;
+	}
+
+
+	@media screen and (max-width: 860px) {
+		.logo-link{
+			margin-right: 3vw;
+		}
+	}
+
+	#linkedin > img{
+		content: url("../../images/LinkedIn.png");
+	}
+
+	#youtube > img{
+		content: url("../../images/YouTube.png");
+	}
+
+	#github > img{
+		content: url("../../images/GitHub.png");
+	}
+
+	@media (hover: hover){
+		.logo-link > img:hover{
+			transform: scale(1.07);
+			filter: brightness(115%);
+		}
+
+		#linkedin > img:hover{
+			content: url("../../images/LinkedInActive.png");
+		}
+		
+		#youtube > img:hover{
+			content: url("../../images/YouTubeActive.png");
+		}
+
+		#github > img:hover{
+			content: url("../../images/GitHubActive.png");
+		}
 	}
