Shadow Racer page about section finished.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -106,12 +106,18 @@ input, select, textarea {
 	body {
 		background-color: #2e3141;
 		background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/SponzaPBRLit.jpg");
-		background-size: auto,
- cover;
-		background-attachment: fixed,
- fixed;
-		background-position: center,
- center;
+		background-size: auto, cover;
+		background-attachment: fixed, fixed;
+		background-position: center, center;
+	}
+
+	body.shadow-racer-banner{
+		background-color: #2c2823 !important;
+		background-image: linear-gradient(to top, rgba(31, 32, 35, 0.8), rgba(16, 16, 17, 0.8)), url("../../images/ShadowRacerBanner.jpg") !important;
+		background-size: auto, cover !important;
+		background-attachment: fixed, fixed !important;
+		background-position: center, center !important;
+		background-repeat: no-repeat;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -3472,11 +3478,16 @@ input, select, textarea {
 				padding: 7em 0 8.25em 0 ;
 				background-color: #2e3141;
 				background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/SponzaPBRLit.jpg");
-				background-size: auto,
- cover;
-				background-position: center,
- center;
+				background-size: auto, cover;
+				background-position: center, center;
 				margin-bottom: -6.5em;
+			}
+
+			#banner.shadow-racer-banner {
+				background-color: #2c2823 !important;
+				background-image: linear-gradient(to top, rgba(31, 32, 35, 0.8), rgba(16, 16, 17, 0.8)), url("../../images/ShadowRacerBanner.jpg") !important;
+				background-size: auto, cover !important;
+				background-position: center, center !important;
 			}
 
 		}
@@ -3584,10 +3595,8 @@ input, select, textarea {
 			padding: 9em 0 6.25em 0 ;
 			background-color: #2e3141;
 			background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/SponzaPBRLit.jpg");
-			background-size: auto,
- cover;
-			background-position: center,
- 0% 30%;
+			background-size: auto, cover;
+			background-position: center, 0% 30%;
 			margin-bottom: -6.5em;
 		}
 
@@ -4081,12 +4090,17 @@ input, select, textarea {
 		#footer {
 			background-color: #2e3141;
 			background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/SponzaPBRLit.jpg");
-			background-size: auto,
- cover;
-			background-position: center,
- center;
+			background-size: auto, cover;
+			background-position: center, center;
 			margin-top: -6.5em;
 			padding-top: 6.5em;
+		}
+
+		#footer.shadow-racer-banner {
+			background-color: #2c2823 !important;
+			background-image: linear-gradient(to top, rgba(31, 32, 35, 0.8), rgba(16, 16, 17, 0.8)), url("../../images/ShadowRacerBanner.jpg") !important;
+			background-size: auto, cover !important;
+			background-position: center, center !important;
 		}
 
 	}
@@ -4402,4 +4416,18 @@ input, select, textarea {
 			color: rgb(20, 179, 139) !important;
 			transition: color 200ms ease-in-out !important;
 		}
+	}
+
+
+	/* Logic for game info list (in about me section) */
+	ul.game-info-list{
+		list-style-type: none;
+		display: flex;
+		flex-direction: row;
+		padding-left: 0px;
+		justify-content: space-evenly;
+	}
+
+	li.game-info-item{
+		padding-left: 0px;
 	}
