--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -105,7 +105,7 @@ input, select, textarea {
 
 	body {
 		background-color: #2e3141;
-		background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/SponzaPBRLit.jpg");
+		background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/SponzaPBRLit.webp");
 		background-size: auto, cover;
 		background-attachment: fixed, fixed;
 		background-position: center, center;
@@ -3477,7 +3477,7 @@ input, select, textarea {
 			#banner {
 				padding: 7em 0 8.25em 0 ;
 				background-color: #2e3141;
-				background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/SponzaPBRLit.jpg");
+				background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/SponzaPBRLit.webp");
 				background-size: auto, cover;
 				background-position: center, center;
 				margin-bottom: -6.5em;
@@ -3485,7 +3485,7 @@ input, select, textarea {
 
 			#banner.shadow-racer-banner {
 				background-color: #2c2823 !important;
-				background-image: linear-gradient(to top, rgba(31, 32, 35, 0.8), rgba(16, 16, 17, 0.8)), url("../../images/ShadowRacerBanner.jpg") !important;
+				background-image: linear-gradient(to top, rgba(67, 67, 81, 0.8), rgba(31, 32, 35, 0.8)), url("../../images/ShadowRacerBanner.jpg") !important;
 				background-size: auto, cover !important;
 				background-position: center, center !important;
 			}
@@ -3594,7 +3594,7 @@ input, select, textarea {
 		#wrapper > header {
 			padding: 9em 0 6.25em 0 ;
 			background-color: #2e3141;
-			background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/SponzaPBRLit.jpg");
+			background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/SponzaPBRLit.webp");
 			background-size: auto, cover;
 			background-position: center, 0% 30%;
 			margin-bottom: -6.5em;
@@ -4089,7 +4089,7 @@ input, select, textarea {
 
 		#footer {
 			background-color: #2e3141;
-			background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/SponzaPBRLit.jpg");
+			background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/SponzaPBRLit.webp");
 			background-size: auto, cover;
 			background-position: center, center;
 			margin-top: -6.5em;
@@ -4442,4 +4442,32 @@ input, select, textarea {
 		max-width: 720px;
 		max-height: 405px;
 		transition: all 500ms ease-in-out;
+	}
+
+	/* Title that separates each section in the my work part of games */
+	.my-work-separator{
+		text-align: center;
+		padding-bottom: 0.5em;
+		position: relative;
+	}
+
+	.my-work-separator::after{
+		content: "";
+		position: absolute;
+		left: 30%;
+		bottom: 0;
+		width: 40%;
+		height: 2px;
+		background-color: rgba(255, 255, 255, 0.125);
+	}
+
+	/* Adjusting div size to fit content (Somehow this works) */
+	.my-box{
+		min-height: 1px;
+		overflow: hidden;
+	}
+
+	.block-images{
+		display: flex;
+		flex-direction: column;
 	}
