--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2464,6 +2464,13 @@ input, select, textarea {
 				width: 100%;
 			}
 
+			/* Added by me so that embedded videos also take up 100% of its parent element */
+			.image.fit iframe {
+				width: 100%;
+				aspect-ratio: 16 / 9;
+				border-radius: 5px;
+			}
+
 		.image.main {
 			display: block;
 			margin: 0 0 3em 0;
